--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,24 @@
 *{
 box-sizing: border-box;
+margin-left: none;
 }
 body{
     font-family: Arial;
     margin: 0;
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
+   /* 
     min-height: 100vh;
-    justify-content: flex-start;
+    justify-content: flex-start; */
   
 }
 header {
     display:flex;
-
+    flex-direction: row;
     text-align: center;
     background: #13293d;
     color: #fff;
+    
   }
 
 ul{
@@ -33,6 +36,103 @@ ul{
     text-align: center;
     
   }
+
+  .subtitle{
+    padding: none;
+    background-image:url(../images/create-a-wp-theme.jpeg); 
+    height: 100px;
+    display:flex;
+    flex-direction: row;
+    text-align: left;
+    flex-grow: 1;
+    
+    /* background: #13293d; */
+    /* color: #fff; */
+  }
+  main{
+    /* padding:10px;
+    display: flex;
+    flex-wrap:wrap; */
+    /* justify-content: space-around; */
+  }
+  section{
+    display: flex;
+    margin-bottom: 20px;
+  }
+  #image-1{
+    max-width: 100vh;
+  }
+  aside {
+    width: 200px;
+    background-color: #b9c6ae;
+    /* padding: 80px; */
+    text-align: right;
+    border-right: 5px solid black;
+    padding: 20px;
+  }
+  .division{
+    padding: 20px;
+    width: 120vh;
+    /* max-width:500px; */
+    /* flex-wrap: wrap; */
+    /* flex-direction: column; */
+    /* flex: 300px; */
+    background-color: rgb(187, 238, 153);
+    margin-left:20px;
+    margin-top: 0px;
+    flex-grow: 1;
+    
+  }
+  .about-me{
+
+  }
+  .work{
+    display:flex ;
+    /* flex-direction: column; */
+  }
+  .Contact-me{
+
+  }
+  .Contact-me > nav{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding-top:30px;
+    text-align: center;
+  }
+  /* .about-me > p{
+    flex: 70vh;
+    background-color: #fff;
+    padding: 20px;
+  } */
+ .work img{
+
+    border: 3px solid rgb(37, 149, 214);
+  }
+ 
+  
+  #img-layout{
+    display: flex;
+    flex-direction: column;
+  }
+  .group-images{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .group-images img{
+    
+    width:47%;
+    /* display: flex;
+    flex-direction: column;
+    flex-wrap: wrap; */
+    /* flex-wrap: 1; */
+    /* padding: 0 20px; */
+    margin:10px 0;
+  }
+
+  
 footer{
 
 }
