--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,8 @@
-
+:root{
+  --baby-blue:rgb(42, 153, 161);
+  --navy-blue: #13293d;
+ --aside-color:  #304457;
+}
 *{
 box-sizing: border-box;
 margin-left: none;
@@ -7,6 +11,7 @@ body{
     font-family: Arial;
     margin: 0;
     max-width: fit-content;
+    color: var(--aside-color);
     /* display: flex;
     flex-direction: column; */
    /* 
@@ -17,10 +22,11 @@ body{
 header {
     display:flex;
     flex-direction: row;
-  
+  justify-content: space-between;
     /* text-align: center; */
-    background: #13293d;
+    background: var(--navy-blue);
     color: #fff;
+    height: 100px;;
   
     
   }
@@ -31,42 +37,61 @@ header {
   }
 
 nav{
-    padding-top: 15px;
+    padding-top: 30px;
     display: flex;
-    text-align: center;
+    /* justify-items: center; */
     /* justify-content:flex-end; */
     /* list-style: none; */
     
   }
 
   a {
-    color: white;
+    color: var(--baby-blue);
     padding: 14px 20px;
-    text-decoration: none;
-    text-align: center;
+    text-decoration:underline;
+    
     
   }
   h6{
     font-size: 10px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   }
+  h2{
+    font-size: 50px;
+  }
+
 h2 ,h4{
     /* font-size: 10px; */
     font-family:sans-serif;
     /* line-height: 20%; */
   }
-
-  .subtitle{
+.subtitle{
+  position: relative;
+  font-family: Arial;
+  display: flex;
+  flex-wrap: wrap;
+}
+  #backg-pic{
     padding: none;
     background-image:url(../images/create-a-wp-theme.jpeg); 
     height: 100px;
     display:flex;
     flex-direction: row;
-    text-align: left;
     flex-grow: 1;
+  }
+
+ 
+h3{
+/* background-size: 20px; */
+  position: absolute;
+  right: 15px;
+  bottom: 20px;
+  background-color:var(--baby-blue);
+  color: var(--navy-blue);
+  /* line-height: 0.5px; */
+  padding-left: 20px;
+  padding-right: 20px;
     
-    /* background: #13293d; */
-    /* color: #fff; */
   }
   main{
     /* padding:10px; */
@@ -79,17 +104,31 @@ h2 ,h4{
     display: flex;
     margin-bottom: 20px;
   }
-
+  #header-box{
+    width: 300px;
+  
+    padding-right: 10px;
+    /* padding-bottom: 40px; */
+    background: var(--baby-blue);
+    color: var(--navy-blue);
+    background-clip: border-box;
+    text-align:end;
+    /* justify-content: center; */
+ 
+}
   aside {
     width: 200px;
-    background-color: #b9c6ae;
+    /* background-color: #b9c6ae; */
     text-align: right;
-    border-right: 5px solid black;
+    border-right: 3px solid black;
+    padding-right: 5px;
+    line-height: 5px;
   }
+ 
   .division{
     padding: 20px;
     width: 80vh;
-    background-color: rgb(187, 238, 153);
+    /* background-color: rgb(187, 238, 153); */
     margin-left:20px;
     margin-top: 0px;
     flex-grow: 1;
@@ -103,6 +142,7 @@ h2 ,h4{
     /* flex-direction: column; */
   }
   .Contact-me{
+    background-color: white;
 
   }
   .Contact-me > nav{
@@ -111,6 +151,8 @@ h2 ,h4{
     justify-content: space-evenly;
     padding-top:30px;
     text-align: center;
+    text-decoration:underline;
+
   }
 
   .surf-report{
@@ -156,7 +198,7 @@ h2 ,h4{
 
   .group-images img{
     width: 38vh;
-    min-width: 400px;
+    min-width: 100px;
     height: 150px;
   }
  .work img{
@@ -175,21 +217,81 @@ h2 ,h4{
 footer{
 
 }
-#header-box{
-    width: 300px;
-  
-    padding: 5px;
-    background: lightblue;
-    color: #13293d;
-    background-clip: border-box;
-    text-align:end;
-    justify-content: center;
- 
-}
+
 
 @media screen and (max-width: 768px) {
-  main,
-  nav {
+  /* main,header, aside, section,
+  nav, body, .division {
+    display: block;
     flex-direction: column;
+  } */
+
+  header, h1{
+    background-color: var(--baby-blue);
+    height: fit-content;
+    display:flex;
+    flex-direction:column;
+    text-align: center;
+    padding: 0%;
+  /* justify-content:center; */
+
   }
+ header>  nav{
+    justify-items: center ;
+    padding: 0%;
+    background-color:var(--navy-blue) ;
+  }
+  h3{
+    /* background-size: 20px; */
+      position: absolute;
+      right: 40%;
+      bottom: 20px;
+      background-color:var(--baby-blue);
+      color: var(--navy-blue);
+      /* line-height: 0.5px; */
+      padding-left: 20px;
+      padding-right: 20px;
+        
+      }
+     main>section{
+      display:flex;
+      flex-direction:column;
+     }
+
+     aside {
+      display: flex;
+      flex-grow: 2;
+      width: 90vh;
+      /* background-color: #b9c6ae; */
+      /* text-align: right; */
+      border-bottom: 3px solid black;
+      padding-left: 5%;
+      padding-right: 100px;
+      margin-right: 500px;
+      /* line-height: 5px; */
+    }
+    /* .division{
+      padding: 20px;
+      width: 80vh;
+
+      margin-left:20px;
+      margin-top: 0px;
+      flex-grow: 1;
+
+} */
+
+.group-images{
+  display: flex;
+  flex-direction:column;
+  /* flex-wrap: wrap; */
+  /* justify-content: space-between; */
+ 
+}
+.Contact-me > nav{
+  
+  margin: 0%;
+  /* text-align: left; */
+  max-width: fit-content;
+  /* background-color: pink; */
+}
 }
