--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,297 +1,323 @@
-:root{
-  --baby-blue:rgb(42, 153, 161);
+:root {
+  --baby-blue: rgb(42, 153, 161);
   --navy-blue: #13293d;
- --aside-color:  #304457;
+  --aside-color: #304457;
+  --border-color: #607181
 }
-*{
-box-sizing: border-box;
-margin-left: none;
+
+* {
+  box-sizing: border-box;
+  margin-left: none;
 }
-body{
-    font-family: Arial;
-    margin: 0;
-    max-width: fit-content;
-    color: var(--aside-color);
-    /* display: flex;
-    flex-direction: column; */
-   /* 
-    min-height: 100vh;
-    justify-content: flex-start; */
-  
+
+body {
+  font-family: serif;
+  margin: 0;
+  /* max-width: fit-content; */
+  color: var(--aside-color);
 }
+
+/* header setting */
 header {
-    display:flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
   justify-content: space-between;
-    /* text-align: center; */
-    background: var(--navy-blue);
-    color: #fff;
-    height: 100px;;
-  
-    
-  }
-  h1{
-    line-height: 70px;
-    text-align: center;
-    font-family:sans-serif;
-  }
+  background: var(--navy-blue);
+  height: 100px;
+}
 
-nav{
-    padding-top: 30px;
-    display: flex;
-    /* justify-items: center; */
-    /* justify-content:flex-end; */
-    /* list-style: none; */
-    
-  }
+h1 {
+  line-height: 70px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
 
-  a {
-    color: var(--baby-blue);
-    padding: 14px 20px;
-    text-decoration:underline;
-    
-    
-  }
-  h6{
-    font-size: 10px;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  }
-  h2{
-    font-size: 50px;
-  }
+/* header navigation section */
+nav {
+  padding-top: 40px;
 
-h2 ,h4{
-    /* font-size: 10px; */
-    font-family:sans-serif;
-    /* line-height: 20%; */
-  }
-.subtitle{
+}
+
+a {
+  color: var(--baby-blue);
+  padding: 14px 20px;
+  text-decoration: underline;
+
+
+}
+
+h2 {
+  font-size: 30px;
+
+}
+
+h3 {
+  position: absolute;
+  right: 15px;
+  bottom: 20px;
+  background-color: var(--baby-blue);
+  color: var(--navy-blue);
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+h2, h4 {
+  font-family: sans-serif;
+}
+
+h6 {
+  font-size: 10px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+}
+
+/* images in the main section setting */
+main img {
+  border: 3px solid var(--baby-blue);
+}
+
+/* About me, Work, Contact me sections setting  */
+section {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+/* Left side of the main setting (About me, Work, Contact me )*/
+aside {
+  width: 250px;
+  text-align: right;
+  border-right: 5px solid var(--border-color);
+  padding-right: 5px;
+  line-height: 5px;
+  color: var(--aside-color);
+}
+
+/* footer setting */
+footer {
+  text-align: center;
+  color: var(--baby-blue);
+  background-color: var(--navy-blue);
+}
+
+/* subtitle section settings */
+.subtitle {
   position: relative;
   font-family: Arial;
   display: flex;
   flex-wrap: wrap;
 }
-  #backg-pic{
-    padding: none;
-    background-image:url(../images/create-a-wp-theme.jpeg); 
-    height: 100px;
-    display:flex;
-    flex-direction: row;
-    flex-grow: 1;
-  }
 
- 
-h3{
-/* background-size: 20px; */
-  position: absolute;
-  right: 15px;
-  bottom: 20px;
-  background-color:var(--baby-blue);
-  color: var(--navy-blue);
-  /* line-height: 0.5px; */
-  padding-left: 20px;
-  padding-right: 20px;
-    
-  }
-  main{
-    /* padding:10px; */
-    display: flex;
-    flex-direction: column;
-    /* flex-wrap:wrap; */
-    /* justify-content: space-around; */
-  }
-  section{
-    display: flex;
-    margin-bottom: 20px;
-  }
-  #header-box{
-    width: 300px;
-  
-    padding-right: 10px;
-    /* padding-bottom: 40px; */
-    background: var(--baby-blue);
-    color: var(--navy-blue);
-    background-clip: border-box;
-    text-align:end;
-    /* justify-content: center; */
- 
+/* subtitle background picture setting */
+#backg-pic {
+  padding: none;
+  background-image: url(../images/create-a-wp-theme.jpeg);
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
 }
-  aside {
-    width: 200px;
-    /* background-color: #b9c6ae; */
-    text-align: right;
-    border-right: 3px solid black;
-    padding-right: 5px;
-    line-height: 5px;
-  }
- 
-  .division{
-    padding: 20px;
-    width: 80vh;
-    /* background-color: rgb(187, 238, 153); */
-    margin-left:20px;
-    margin-top: 0px;
-    flex-grow: 1;
-    
-  }
-  .about-me{
 
-  }
-  .work{
-    display:flex ;
-    /* flex-direction: column; */
-  }
-  .Contact-me{
-    background-color: white;
 
-  }
-  .Contact-me > nav{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    padding-top:30px;
-    text-align: center;
-    text-decoration:underline;
+/* header my picture and text setting */
+#header-box {
+  display: flex;
+  flex-direction: row;
+  padding-right: 10px;
+  background: var(--baby-blue);
+  color: var(--navy-blue);
+  background-clip: border-box;
 
-  }
+}
 
-  .surf-report{
-    display: flex;
-    flex-direction: column;
-    /* width: 100vh; */
-  }
-  
-#image-1{
+/* Right side of the main setting */
+.division {
+  padding: 20px;
+  width: 80vh;
+  margin-left: 20px;
+  margin-top: 0px;
+  flex-grow: 1;
+  /* margin-right: 10%; */
+
+}
+
+.about-me {
+  display: flex;
+}
+
+/* About me Section setting */
+.about-me>section {
+  display: flex;
+  flex-direction: column;
+}
+
+/* Work Section setting */
+.work {
+  display: flex;
+}
+
+/* Contact me Section setting */
+.Contact-me {
+  display: flex;
+  flex-direction: row;
+}
+
+/* Contact me navigation setting */
+.Contact-me>nav {
+
+  justify-content: space-between;
+  padding-top: 30px;
+  /* text-align: center; */
+  text-decoration: underline;
+
+}
+
+/* Surf Report setting */
+.surf-report {
+  display: flex;
+  flex-direction: column;
+}
+
+/* Surf Report picture setting */
+.image-1 {
   display: flex;
   flex-grow: 1;
-    /* max-width: 100vh; */
-    max-height: 30vh ;
-    /* width: 100vh; */
-  }
+  max-height: 30vh;
+}
 
-  .group-images{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-   
-  }
-  .container {
-    position: relative;
-    font-family: Arial;
-    display: flex;
-    flex-wrap: wrap;
-    padding-bottom: 10px;
+/* LED Wall, Calculator , Pastel puzzles, and Run Buddy setting */
+.group-images {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
 
-    
-  }
-  .text-block {
-    position: absolute;
-    /* left: 20px; */
-    bottom: 20px;
-    background-color: black;
-    color: white;
-    line-height: 0.5px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-
-  .group-images img{
-    width: 38vh;
-    min-width: 100px;
-    height: 150px;
-  }
- .work img{
-
-    border: 3px solid rgb(37, 149, 214);
-  }
-
- img:hover{
-  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
-  filter:sepia(90%)
- }
-  
-
-
-  
-footer{
 
 }
 
+/* LED Wall, Calculator , Pastel puzzles, 
+  and Run Buddy picture and text box setting */
+.container {
+  position: relative;
+  font-family: Arial;
+  display: flex;
+  flex-wrap: wrap;
+  padding-bottom: 10px;
 
+
+}
+
+/* LED Wall, Calculator , Pastel puzzles, 
+  and Run Buddy text box setting */
+.text-block {
+  position: absolute;
+  bottom: 20px;
+  background-color: var(--baby-blue);
+  color: white;
+  line-height: 0.5px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+/* LED Wall, Calculator , Pastel puzzles, 
+  and Run Buddy image setting */
+.group-images img {
+  width: 400px;
+  /* max-width: 500px; */
+  min-width: 100px;
+  height: 130px;
+}
+
+
+/* apply filter to all the picture in the main section */
+main img:hover {
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+  filter: sepia(90%)
+}
+
+
+
+/* change the layout when browser width is less than  768px */
 @media screen and (max-width: 768px) {
-  /* main,header, aside, section,
-  nav, body, .division {
-    display: block;
-    flex-direction: column;
-  } */
 
-  header, h1{
+  /* stack everything on top of each other */
+  body {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+  }
+
+  header {
     background-color: var(--baby-blue);
     height: fit-content;
-    display:flex;
-    flex-direction:column;
-    text-align: center;
-    padding: 0%;
-  /* justify-content:center; */
+
+    display: flex;
+    flex-direction: column;
+    padding-left: 0%;
+    padding-bottom: 0%;
 
   }
- header>  nav{
-    justify-items: center ;
+
+
+  header>nav {
+    display: flex;
     padding: 0%;
-    background-color:var(--navy-blue) ;
+    background-color: var(--navy-blue);
+
   }
-  h3{
-    /* background-size: 20px; */
-      position: absolute;
-      right: 40%;
-      bottom: 20px;
-      background-color:var(--baby-blue);
-      color: var(--navy-blue);
-      /* line-height: 0.5px; */
-      padding-left: 20px;
-      padding-right: 20px;
-        
-      }
-     main>section{
-      display:flex;
-      flex-direction:column;
-     }
 
-     aside {
-      display: flex;
-      flex-grow: 2;
-      width: 90vh;
-      /* background-color: #b9c6ae; */
-      /* text-align: right; */
-      border-bottom: 3px solid black;
-      padding-left: 5%;
-      padding-right: 100px;
-      margin-right: 500px;
-      /* line-height: 5px; */
-    }
-    /* .division{
-      padding: 20px;
-      width: 80vh;
+  h3 {
+    position: absolute;
+    right: 50%;
+    bottom: 0px;
+    background-color: var(--baby-blue);
+    color: var(--navy-blue);
+    padding-left: 20px;
+    padding-right: 20px;
 
-      margin-left:20px;
-      margin-top: 0px;
-      flex-grow: 1;
+  }
 
-} */
 
-.group-images{
-  display: flex;
-  flex-direction:column;
-  /* flex-wrap: wrap; */
-  /* justify-content: space-between; */
- 
-}
-.Contact-me > nav{
-  
-  margin: 0%;
-  /* text-align: left; */
-  max-width: fit-content;
-  /* background-color: pink; */
-}
+  main>section {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: 1;
+    flex-wrap: wrap;
+  }
+
+  aside {
+    display: flex;
+    flex-direction: row;
+    border-right: 0%;
+    border-right-color: white;
+    text-align: left;
+    text-indent: 1em;
+    width: 50vh;
+    margin: 0%;
+    margin-left: 5%;
+    border-bottom: 5px solid var(--border-color);
+  }
+
+  .division {
+    padding: 0%;
+    width: 50vh;
+    margin: 0%;
+    padding-top: 5%;
+    margin-left: 5%;
+    margin-right: 10%;
+  }
+
+  .group-images>.container>img {
+    padding: 0%;
+    max-width: 300px;
+    max-height: 100px;
+  }
+
+  .Contact-me>nav {
+
+    font-size: 70%;
+  }
 }
