--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ h2 {
 h3 {
   position: absolute;
   right: 15px;
-  bottom: 20px;
+  top: 40%;
   background-color: var(--baby-blue);
   color: var(--navy-blue);
   padding-left: 20px;
@@ -68,6 +68,10 @@ h2, h4 {
 h6 {
   font-size: 10px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+p{
+  margin: 0%;
 }
 
 main {
@@ -185,7 +189,8 @@ footer {
 .image-1 {
   display: flex;
   flex-grow: 1;
-  max-height: 30vh;
+  max-width: 700px;
+  max-height:400px;
 }
 
 /* LED Wall, Calculator , Pastel puzzles, and Run Buddy setting */
@@ -193,6 +198,7 @@ footer {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  max-width: 700px;
   justify-content: space-between;
 
 
@@ -225,7 +231,7 @@ footer {
 /* LED Wall, Calculator , Pastel puzzles, 
   and Run Buddy image setting */
 .group-images img {
-  width: 400px;
+  width: 340px;
   /* max-width: 500px; */
   min-width: 100px;
   height: 130px;
@@ -271,7 +277,7 @@ main img:hover {
 
   h3 {
     position: absolute;
-    right: 50%;
+    right: 72%;
     bottom: 0px;
     background-color: var(--baby-blue);
     color: var(--navy-blue);
